5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4365/executions/1577_1559.log
== TEST (2019-04-15 23:47:15) 
-- CODE:
frase ="ada lovelace foi a primeira programadora da historia"
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:48:32) 
-- CODE:
frase ="ada lovelace foi a primeira programadora da historia"
print(frase.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7fd51c6b89f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:49:15) 
-- CODE:
frase ="ada lovelace foi a primeira programadora da historia"
print(frase.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f08f84919f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:02:31) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia"."upper())"
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia"."upper())"
                                                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:02:57) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia"."upper())"
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia"."upper())"
                                                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:03:24) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia"."upper())
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia"."upper())
                                                                         ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:04:08) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia" ."upper())
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia" ."upper())
                                                                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:04:39) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia" .upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:04:47) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia" .upper())
-- EXECUTION TIME:
0.205236
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:04:54) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia" .upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:05:32) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia" .upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:06:11) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia." .upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:06:18) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia." .upper())
-- EXECUTION TIME:
0.137173
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
